Fixed images on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -592,9 +592,9 @@ strong {
 }
 
 .media-item img {
-  height: 100%;
+  height: auto;
   width: auto;
-  max-width: 100%; /* Ensure images don't exceed their container's width */
+  max-width: 100%;
   max-height: 700px;
 }
 
